; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_pci_irq.c_pci_irq_reserve.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_pci_irq.c_pci_irq_reserve.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@irq_counts = common dso_local global i64* null, align 8
@pirq_cold = common dso_local global i32 0, align 4
@IRQ_DISABLED = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pci_irq_reserve(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp sge i32 %3, 0
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load i32, i32* %2, align 4
  %7 = load i64*, i64** @irq_counts, align 8
  %8 = call i32 @nitems(i64* %7)
  %9 = icmp ult i32 %6, %8
  br label %10

10:                                               ; preds = %5, %1
  %11 = phi i1 [ false, %1 ], [ %9, %5 ]
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = load i32, i32* @pirq_cold, align 4
  %15 = call i32 @assert(i32 %14)
  %16 = load i64*, i64** @irq_counts, align 8
  %17 = load i32, i32* %2, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i64, i64* %16, i64 %18
  %20 = load i64, i64* %19, align 8
  %21 = icmp eq i64 %20, 0
  br i1 %21, label %30, label %22

22:                                               ; preds = %10
  %23 = load i64*, i64** @irq_counts, align 8
  %24 = load i32, i32* %2, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i64, i64* %23, i64 %25
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* @IRQ_DISABLED, align 8
  %29 = icmp eq i64 %27, %28
  br label %30

30:                                               ; preds = %22, %10
  %31 = phi i1 [ true, %10 ], [ %29, %22 ]
  %32 = zext i1 %31 to i32
  %33 = call i32 @assert(i32 %32)
  %34 = load i64, i64* @IRQ_DISABLED, align 8
  %35 = load i64*, i64** @irq_counts, align 8
  %36 = load i32, i32* %2, align 4
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds i64, i64* %35, i64 %37
  store i64 %34, i64* %38, align 8
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @nitems(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
